--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="map_key" translatable="false">AIzaSyDmztqTz2fci-ok0BADM3fdwRSkYdbK39g</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Category</string>
@@ -15,4 +16,7 @@
     <string name="last_name">Last Name</string>
     <string name="register">Register</string>
     <string name="cancel">Cancel</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
